task(poetry): replace setuptools with poetry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,19 @@
+[tool.poetry]
+name = "pyauth0"
+version = "0.1.2"
+description = "Python utilities for Auth0"
+authors = ["svaponi <10941963+svaponi@users.noreply.github.com>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.8"
+python-jose = "^3.3.0"
+
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.0"
+python-dotenv = "^1.0.1"
+
 [build-system]
-requires = ["setuptools>=42"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
