--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -19,20 +19,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Python 3.x
+      - name: Install poetry
+        run: pipx install poetry
+      - name: Set up python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
+        run: poetry install
       - name: Build package
-        run: python -m build
+        run: poetry build
       - name: Publish package
-        uses: pypa/gh-action-pypi-publish@v1.8.10
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+        env:
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        run: |
+          poetry config pypi-token.pypi $PYPI_TOKEN
+          poetry publish
