--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,17 @@ classifiers = ['Development Status :: 4 - Beta']
 python = ">=3.8,<3.13"
 python-jose = "^3.3.0"
 httpx = "^0.27.0"
+cryptography = { version = "^42.0.6", optional = true }
+
+[tool.poetry.extras]
+crypto = ["cryptography"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
 python-dotenv = "^1.0.1"
 pytest-httpserver = "^1.0.10"
 pytest-asyncio = "^0.23.6"
+cryptography = "^42.0.6"
 
 [tool.poetry.group.coverage]
 optional = true
